--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="card">
             <div class="qr-code">
                 <img
-                    src="/images/image-qr-code.png"
+                    src="./images/image-qr-code.png"
                     alt="QR code to Frontend Mentor"
                 />
             </div>
